// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox generates a label if a child prop of text is supplied 1`] = `
<div
  data-radium={true}
  style={
    Object {
      "display": "flex",
    }
  }
>
  <div
    data-radium={true}
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <img
      alt=""
      data-radium={true}
      src="test-file-stub"
      style={
        Object {
          "height": 22,
          "width": 22,
        }
      }
      tabIndex="-1"
    />
    <input
      aria-label={undefined}
      checked={false}
      data-radium={true}
      id={1}
      onClick={[Function]}
      style={
        Object {
          "-moz-appearance": "none",
          "-ms-appearance": "none",
          "-webkit-appearance": "none",
          "appearance": "none",
          "height": 22,
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": 22,
        }
      }
      type="checkbox"
      value={undefined}
    />
  </div>
  <label
    data-radium={true}
    htmlFor={1}
    style={
      Object {
        "marginLeft": 10,
      }
    }
  >
    Test label
  </label>
</div>
`;

exports[`Checkbox incorporates user styles if passed 1`] = `
<div
  data-radium={true}
  style={
    Object {
      "background": "pink",
      "display": "flex",
    }
  }
>
  <div
    data-radium={true}
    style={
      Object {
        "border": "2px solid purple",
        "position": "relative",
      }
    }
  >
    <img
      alt=""
      data-radium={true}
      src="test-file-stub"
      style={
        Object {
          "height": 22,
          "width": 22,
        }
      }
      tabIndex="-1"
    />
    <input
      aria-label={undefined}
      checked={false}
      data-radium={true}
      id={1}
      onClick={[Function]}
      style={
        Object {
          "-moz-appearance": "none",
          "-ms-appearance": "none",
          "-webkit-appearance": "none",
          "appearance": "none",
          "height": 22,
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": 22,
        }
      }
      type="checkbox"
      value={undefined}
    />
  </div>
  <label
    data-radium={true}
    htmlFor={1}
    style={
      Object {
        "color": "green",
        "marginLeft": 10,
      }
    }
  >
    Test label
  </label>
</div>
`;

exports[`Checkbox incorporates user styles if passed 2`] = `
<div
  data-radium={true}
  style={
    Object {
      "display": "flex",
    }
  }
>
  <div
    data-radium={true}
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <img
      alt=""
      data-radium={true}
      src="test-file-stub"
      style={
        Object {
          "height": 22,
          "width": 22,
        }
      }
      tabIndex="-1"
    />
    <input
      aria-label={undefined}
      checked={false}
      data-radium={true}
      id={2}
      onClick={[Function]}
      style={
        Object {
          "-moz-appearance": "none",
          "-ms-appearance": "none",
          "-webkit-appearance": "none",
          "appearance": "none",
          "height": 22,
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": 22,
        }
      }
      type="checkbox"
      value={undefined}
    />
  </div>
  <label
    data-radium={true}
    htmlFor={2}
    style={
      Object {
        "marginLeft": 10,
      }
    }
  >
    Test label
  </label>
</div>
`;

exports[`Checkbox renders the correct button type 1`] = `
<div
  data-radium={true}
  style={
    Object {
      "position": "relative",
    }
  }
>
  <img
    alt=""
    data-radium={true}
    src="test-file-stub"
    style={
      Object {
        "height": 22,
        "width": 22,
      }
    }
    tabIndex="-1"
  />
  <input
    aria-label={undefined}
    checked={false}
    data-radium={true}
    id={1}
    onClick={[Function]}
    style={
      Object {
        "-moz-appearance": "none",
        "-ms-appearance": "none",
        "-webkit-appearance": "none",
        "appearance": "none",
        "height": 22,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 22,
      }
    }
    type="checkbox"
    value={undefined}
  />
</div>
`;

exports[`Checkbox renders the correct selected state 1`] = `
<div
  data-radium={true}
  style={
    Object {
      "position": "relative",
    }
  }
>
  <img
    alt=""
    data-radium={true}
    src="test-file-stub"
    style={
      Object {
        "height": 22,
        "width": 22,
      }
    }
    tabIndex="-1"
  />
  <input
    aria-label={undefined}
    checked={false}
    data-radium={true}
    id={1}
    onClick={[Function]}
    style={
      Object {
        "-moz-appearance": "none",
        "-ms-appearance": "none",
        "-webkit-appearance": "none",
        "appearance": "none",
        "height": 22,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 22,
      }
    }
    type="checkbox"
    value={undefined}
  />
</div>
`;

exports[`Checkbox renders the correct selected state 2`] = `
<div
  data-radium={true}
  style={
    Object {
      "position": "relative",
    }
  }
>
  <img
    alt=""
    data-radium={true}
    src="test-file-stub"
    style={
      Object {
        "height": 22,
        "width": 22,
      }
    }
    tabIndex="-1"
  />
  <input
    aria-label={undefined}
    checked={true}
    data-radium={true}
    id={2}
    onClick={[Function]}
    style={
      Object {
        "-moz-appearance": "none",
        "-ms-appearance": "none",
        "-webkit-appearance": "none",
        "appearance": "none",
        "height": 22,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 22,
      }
    }
    type="checkbox"
    value={undefined}
  />
</div>
`;
